# docs/swagger.yaml
@@ -1,5 +1,26 @@
 basePath: /
 definitions:
+  do.ServiceDetail:
+    properties:
+      access_control:
+        $ref: '#/definitions/po.ServiceAccessControl'
+        type: object
+      grpc_rule:
+        $ref: '#/definitions/po.ServiceGRPCRule'
+        type: object
+      http_rule:
+        $ref: '#/definitions/po.ServiceHTTPRule'
+        type: object
+      info:
+        $ref: '#/definitions/po.ServiceInfo'
+        type: object
+      load_balance:
+        $ref: '#/definitions/po.ServiceLoadBalance'
+        type: object
+      tcp_rule:
+        $ref: '#/definitions/po.ServiceTCPRule'
+        type: object
+    type: object
   dto.AdminInfoOutput:
     properties:
       avatar:
@@ -52,6 +73,78 @@ definitions:
     required:
     - password
     type: object
+  dto.ServiceAddHTTPInput:
+    properties:
+      black_list:
+        description: 黑名单IP
+        type: string
+      client_flow_limit:
+        description: 客户端IP限流
+        type: integer
+      header_transfor:
+        description: Header转换
+        type: string
+      ip_list:
+        description: IP列表
+        type: string
+      need_https:
+        description: 支持https
+        type: integer
+      need_strip_uri:
+        description: 启用strip_uri
+        type: integer
+      need_websocket:
+        description: 是否支持websocket
+        type: integer
+      open_auth:
+        description: 是否开启权限
+        type: integer
+      round_type:
+        description: 轮询方式
+        type: integer
+      rule:
+        description: 接入路径：域名或前缀
+        type: string
+      rule_type:
+        description: 接入类型
+        type: integer
+      service_desc:
+        description: 服务描述
+        type: string
+      service_flow_limit:
+        description: 服务端限流
+        type: integer
+      service_name:
+        description: 服务名称
+        type: string
+      upstream_connect_timeout:
+        description: 建立连接超时
+        type: integer
+      upstream_header_timeout:
+        description: 获取header超时
+        type: integer
+      upstream_idle_timeout:
+        description: 链接最大空闲连接时间
+        type: integer
+      upstream_max_idle:
+        description: 最大空闲连接数
+        type: integer
+      url_rewrite:
+        description: RUL重写功能
+        type: string
+      weight_list:
+        description: IP权重
+        type: string
+      white_list:
+        description: 白名单IP
+        type: string
+    required:
+    - ip_list
+    - rule
+    - service_desc
+    - service_name
+    - weight_list
+    type: object
   dto.ServiceListItemOutput:
     properties:
       id:
@@ -90,6 +183,96 @@ definitions:
         description: 总数
         type: integer
     type: object
+  dto.ServiceStatOutput:
+    properties:
+      today:
+        description: 列表
+        items:
+          type: integer
+        type: array
+      yesterday:
+        description: 列表
+        items:
+          type: integer
+        type: array
+    type: object
+  dto.ServiceUpdateHTTPInput:
+    properties:
+      black_list:
+        description: 黑名单IP
+        type: string
+      client_flow_limit:
+        description: 客户端IP限流
+        type: integer
+      header_transfor:
+        description: Header转换
+        type: string
+      id:
+        description: 服务 ID
+        example: 66
+        type: integer
+      ip_list:
+        description: IP列表
+        type: string
+      need_https:
+        description: 支持https
+        type: integer
+      need_strip_uri:
+        description: 启用strip_uri
+        type: integer
+      need_websocket:
+        description: 是否支持websocket
+        type: integer
+      open_auth:
+        description: 是否开启权限
+        type: integer
+      round_type:
+        description: 轮询方式
+        type: integer
+      rule:
+        description: 接入路径：域名或前缀
+        type: string
+      rule_type:
+        description: 接入类型
+        type: integer
+      service_desc:
+        description: 服务描述
+        type: string
+      service_flow_limit:
+        description: 服务端限流
+        type: integer
+      service_name:
+        description: 服务名称
+        type: string
+      upstream_connect_timeout:
+        description: 建立连接超时
+        type: integer
+      upstream_header_timeout:
+        description: 获取header超时
+        type: integer
+      upstream_idle_timeout:
+        description: 链接最大空闲连接时间
+        type: integer
+      upstream_max_idle:
+        description: 最大空闲连接数
+        type: integer
+      url_rewrite:
+        description: RUL重写功能
+        type: string
+      weight_list:
+        description: IP权重
+        type: string
+      white_list:
+        description: 白名单IP
+        type: string
+    required:
+    - id
+    - ip_list
+    - rule
+    - service_desc
+    - service_name
+    - weight_list
+    type: object
   middleware.Response:
     properties:
       data:
@@ -107,6 +290,112 @@ definitions:
       trace_id:
         description: 日志 traceID
         type: object
+    type: object
+  po.ServiceAccessControl:
+    properties:
+      blackList:
+        type: string
+      clientIPFlowLimit:
+        type: integer
+      id:
+        type: integer
+      openAuth:
+        type: integer
+      serviceFlowLimit:
+        type: integer
+      serviceID:
+        type: integer
+      whiteHostName:
+        type: string
+      whiteList:
+        type: string
+    type: object
+  po.ServiceGRPCRule:
+    properties:
+      headerTransfor:
+        type: string
+      id:
+        type: integer
+      port:
+        type: integer
+      serviceID:
+        type: integer
+    type: object
+  po.ServiceHTTPRule:
+    properties:
+      headerTransfor:
+        type: string
+      id:
+        type: integer
+      needHTTPs:
+        type: integer
+      needStripUri:
+        type: integer
+      needWebsocket:
+        type: integer
+      rule:
+        type: string
+      ruleType:
+        type: integer
+      serviceID:
+        type: integer
+      urlRewrite:
+        type: string
+    type: object
+  po.ServiceInfo:
+    properties:
+      createdAt:
+        type: string
+      id:
+        type: integer
+      isDelete:
+        type: integer
+      loadType:
+        type: integer
+      serviceDesc:
+        type: string
+      serviceName:
+        type: string
+      updatedAt:
+        type: string
+    type: object
+  po.ServiceLoadBalance:
+    properties:
+      checkInterval:
+        type: integer
+      checkMethod:
+        type: integer
+      checkTimeout:
+        type: integer
+      forbidList:
+        type: string
+      id:
+        type: integer
+      iplist:
+        type: string
+      roundType:
+        type: integer
+      serviceID:
+        type: integer
+      upStreamConnectTimeout:
+        type: integer
+      upStreamHeaderTimeout:
+        type: integer
+      upStreamIdleTimeout:
+        type: integer
+      upStreamMaxIdle:
+        type: integer
+      weightList:
+        type: string
+    type: object
+  po.ServiceTCPRule:
+    properties:
+      id:
+        type: integer
+      port:
+        type: integer
+      serviceID:
+        type: integer
     type: object
 host: 127.0.0.1:8080
 info:
@@ -216,6 +505,88 @@ paths:
       summary: 管理员退出
       tags:
       - 管理员接口
+  /service/service_add_http:
+    post:
+      consumes:
+      - application/json
+      description: 添加 HTTP 服务
+      operationId: /service/service_add_http
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ServiceAddHTTPInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 添加 HTTP 服务
+      tags:
+      - 服务管理
+  /service/service_delete:
+    get:
+      consumes:
+      - application/json
+      description: 服务删除
+      operationId: /service/service_delete
+      parameters:
+      - description: 服务ID
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 服务删除
+      tags:
+      - 服务管理
+  /service/service_detail:
+    get:
+      consumes:
+      - application/json
+      description: 服务详情
+      operationId: /service/service_detail
+      parameters:
+      - description: 服务ID
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/do.ServiceDetail'
+              type: object
+      summary: 服务详情
+      tags:
+      - 服务管理
   /service/service_list:
     get:
       consumes:
@@ -250,6 +621,61 @@ paths:
                   $ref: '#/definitions/dto.ServiceListOutput'
               type: object
       summary: 服务列表
+      tags:
+      - 服务管理
+  /service/service_stat:
+    get:
+      consumes:
+      - application/json
+      description: 服务统计
+      operationId: /service/service_stat
+      parameters:
+      - description: 服务ID
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ServiceStatOutput'
+              type: object
+      summary: 服务统计
+      tags:
+      - 服务管理
+  /service/service_update_http:
+    post:
+      consumes:
+      - application/json
+      description: 修改 HTTP 服务
+      operationId: /service/service_update_http
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ServiceUpdateHTTPInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 修改 HTTP 服务
       tags:
       - 服务管理
 swagger: "2.0"
